tests/snapshots/ui_snapshots__dashboard_spec_chat_wide.snap
---
source: tests/ui_snapshots.rs
assertion_line: 637
expression: "render_at(&app, 120, 30)"
---
"                            │ spec · § Behavior (the contract: WHAT, not HOW)  │ 󰚩 chat · spec · § Behavior (the contra…"
"  PIPELINE ──────────────── │󰲡 Feature: Audio                                  │› make behavior stricter: retry 3x      "
"  ○ spec                    │                                                  │Tightening the retry rule.              "
"  ○ plan                    │󰲣 Goal                                            │ $0.030 4.2s                            "
"  ○ plan-review             │                                                  │  ✓ spec updated · $0.030               "
"  ○ tests-red               │low-latency playback                              │                                        "
"  ○ implement               │                                                  │                                        "
"  ○ dual-review             │󰲣 Behavior (the contract: WHAT, not HOW)          │                                        "
"  ○ coverage                │                                                  │                                        "
"  » next: spec              │must retry on drop                                │                                        "
"  architecture.md missing - │                                                  │                                        "
"    run `ritual architect`  │󰲣 Edge cases & failure modes                      │                                        "
"    to ground planning      │                                                  │                                        "
"                            │󰲣 Out of scope                                    │                                        "
" 󰚩 AGENTS ───────────────── │                                                  │                                        "
"  󰚩 claude …                │                                                  │                                        "
"  󰚩 codex …                 │                                                  │                                        "
"  󱘖 bridge …                │                                                  │                                        "
"   nvim …                   │                                                  │                                        "
"   check ?                  │                                                  │                                        "
"                            │                                                  │                                        "
"   detached                 │                                                  │                                        "
"                            │                                                  │                                        "
"                            │                                                  │                                        "
"                            │                                                  │                                        "
"                            │                                                  │                                        "
"                            │                                                  │                                        "
"                            │                                                  │  and ▏cap it at 3 attempts             "
"                            │                                                  │ enter send · alt+enter ⏎ · tab target ·"
" RITUAL   detached  detached                                                                                        "
