tests/snapshots/ui_snapshots__dashboard_stage_detail_blocked.snap
---
source: tests/ui_snapshots.rs
assertion_line: 544
expression: out
---
"                            │  live   findings    history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │                    █▀█ █ ▀█▀ █ █ ▄▀█ █                      "
"  ○ plan-review             │                    █▀▄ █  █  █▄█ █▀█ █▄▄                    "
"  ○ tests-red               │         s u m m o n  ·  r e v i e w  ·  v e r i f y         "
"  ○ implement         ╭ stage · coverage ──────────────────────────╮                      "
"  ○ dual-review       │                                            │ → impl → dual        "
"  ○ coverage          │ ○ pending                                  │ec or plan live       "
"  » next: spec        │                                            │ch · a takeover       "
"                      │ ! plan.md missing - run plan first         │ d dismiss · / filter "
" 󰚩 AGENTS ────────────│                                            │· invariants          "
"  󰚩 claude …          │ suggested: resolve the blocker first       │· costs               "
"  󰚩 codex …           │                                            │ · repro              "
"  󱘖 bridge …          │ enter  run   j/k  stage   esc/q/i  close   │ codes                "
"   nvim …             ╰────────────────────────────────────────────╯features              "
"   check ?                  │     more  ps · attach · doctor · clean · pr-comment         "
"                            │    guide  5: the detailed guide & tips, in-app              "
"   detached                 │                                                             "
"                            │     enter  run stage    :  palette    ?  keys    q  quit    "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
