tests/snapshots/ui_snapshots__dashboard_statusline_spend_sparkline.snap
---
source: tests/ui_snapshots.rs
assertion_line: 555
expression: render(&app)
---
"                            │  live   findings    history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │                    █▀█ █ ▀█▀ █ █ ▄▀█ █                      "
"  ○ plan-review             │                    █▀▄ █  █  █▄█ █▀█ █▄▄                    "
"  ○ tests-red               │         s u m m o n  ·  r e v i e w  ·  v e r i f y         "
"  ○ implement               │                                                             "
"  ○ dual-review             │ pipeline  spec → plan → review → tests → impl → dual        "
"  ○ coverage                │     chat  s: chat to write/edit the spec or plan live       "
"  » next: spec              │     runs  daemons: quit freely, reattach · a takeover       "
"                            │ findings  enter details · F/m triage · d dismiss · / filter "
" 󰚩 AGENTS ───────────────── │    gates  mutants · secrets · lessons · invariants          "
"  󰚩 claude …                │    money  daily budget · per-run caps · costs               "
"  󰚩 codex …                 │   safety  redaction · verify-log chain · repro              "
"  󱘖 bridge …                │       ci  --ci → JUnit · --json + exit codes                "
"   nvim …                   │ parallel  new --worktree · [ ] switch features              "
"   check ?                  │     more  ps · attach · doctor · clean · pr-comment         "
"                            │    guide  5: the detailed guide & tips, in-app              "
"   detached                 │                                                             "
"                            │     enter  run stage    :  palette    ?  keys    q  quit    "
"                            │                                                             "
" RITUAL   detached  detached                                           ▂▅▃█▄ $1.90/$5 "
