tests/snapshots/ui_snapshots__dashboard_triage_confirm.snap
---
source: tests/ui_snapshots.rs
assertion_line: 261
expression: render(&app)
---
"                            │   live   findings   history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │                                                             "
"  ○ plan-review             │                                                             "
"  ○ tests-red               │                                                             "
"  ○ implement               │                                                             "
"  ○ dual-review             │                                                             "
"  ○ coverage  ╭ apply recommended triage ──────────────────────────────────╮              "
"  » next: spec│apply recommended triage to 35 finding(s)?                  │              "
"  architecture│✓ archive 31 (prose→reason) · ⚑A 2 · ⚑M 1 · ∅ dismiss 1     │              "
"    run `ritua│3 need your judgment - untouched                            │eview         "
"    to ground │ y  apply   esc  cancel                                     │              "
"              ╰────────────────────────────────────────────────────────────╯              "
" 󰚩 AGENTS ───────────────── │                                                             "
"  󰚩 claude …                │                                                             "
"  󰚩 codex …                 │                                                             "
"  󱘖 bridge …                │                                                             "
"   nvim …                   │                                                             "
"   check ?                  │                                                             "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
